--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
 </ul>
 <p>This is the site full of my projects.</p>
-<footer>copyright 2021</footer>
+<footer>copyright 2021.</footer>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
