--- a/10th grade projects.html
+++ b/10th grade projects.html
@@ -25,6 +25,14 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
+	
+<h2 style="text-align: center;"><p>My Slipknot band members project.</p>
+<iframe src="https://docs.google.com/document/d/1RsWc81NuQa8YANnml41eWMhZdE33OpS6YQ9K_y8glPw/edit?usp=sharing" width="60%" height="700"></iframe></h2>
+<br>
+<h3 style="text-align: center;"><p>My Elon Musk project.</p>
+<iframe src="https://docs.google.com/presentation/d/1-NnV4twmTwn9W3G1jOpx8y-2eQpzzsU3_Nh8C2WfN7I/edit?usp=sharing" width="60%" height="700"></iframe></h3>
+<h4 style="text-align: center;"><p>best buy project.</p>
+<iframe src="https://docs.google.com/presentation/d/1tuIaCsb4-7TMMDY4acewE9umwxpRm6gSp-kGQom21TE/edit?usp=sharing" width="60%" height="700"></iframe></h4>
 <body>
 </body>
 </html>
