added projects on 9th grade projects

--- a/9th grade projects.html
+++ b/9th grade projects.html
@@ -30,6 +30,21 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
 	
-<iframe src="https://docs.google.com/presentation/d/1ePfyBprHkC-Ay0lSlvz1oVZOECh8y0dXiQHKyrQpqmo/edit?usp=sharing"></iframe>
+<h2 style="text-align: center;"><p>My project about food during world war one.</p><iframe src="https://docs.google.com/presentation/d/1ePfyBprHkC-Ay0lSlvz1oVZOECh8y0dXiQHKyrQpqmo/edit?usp=sharing" width="60%" height="700"></iframe></h2>
+<br>
+    <br>
+<h3 style="text-align: center;"><p>My project about the supercomputer that was made in MN.</p><iframe src="https://docs.google.com/presentation/d/1XVd-S3CUXClKn4b3BdPg9g7a8KJK-ixrEEKEyps9rQc/edit?usp=sharing" width="60%" height="700"></iframe></h3>
+<br>
+    <br>
+<h4 style="text-align: center;"><p>My project about mixing animals togeter.</p><iframe src="https://docs.google.com/presentation/d/1VDM0v_UusqRxJWoZ9k3XQ00bIN5nycpvUgameVY0bmg/edit?usp=sharing" width="60%" height="700"></iframe></h4>
+	
+<h5 style="text-align: center;"><p>My project about civilizations.</p></h5>
+<img src="/20200205_141925.jpg" width="1088" height="503" alt=""/>
+<img src="/20200205_141932.jpg" width="1088" height="503" alt=""/>
+<nav aria-label="breadcrumb">
+   <ol class="breadcrumb">
+</ol>
+	</nav>
+	   
 </body>
 </html>
