added personal projects page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
   </li>
-  <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="file:///C:/Users/hauntedw/Documents/Unnamed%20Site%203/personal_projects.html">Personal projects</a> </li>
   <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
 </ul>
 <p>This is the site full of my projects.</p>
