--- a/10th grade projects.html
+++ b/10th grade projects.html
@@ -19,7 +19,7 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
   </li>
-  <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="file:///C:/Users/hauntedw/Documents/Unnamed%20Site%203/personal_projects.html">Personal projects</a> </li>
   <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
 </ul>
 <script src="js/jquery-3.4.1.min.js"></script>
