--- a/personal_projects.html
+++ b/personal_projects.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="portfolio.css">
 <meta charset="utf-8">
-<title>personal_projects</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Personal projects</title>
+<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
