--- a/personal_projects.html
+++ b/personal_projects.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<h1>Personal Projects</h1>
 			<ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
   <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
