--- a/9th grade projects.html
+++ b/9th grade projects.html
@@ -23,7 +23,7 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
   </li>
-  <li class="nav-item"> <a class="nav-link disabled" href="personal_projects.html">Personal projects</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="personal_projects.html">Personal projects</a> </li>
   <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
 </ul>
 <script src="js/jquery-3.4.1.min.js"></script>
