added a drop-down for personal projects

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <h1>MY PORTFOLIO</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-  <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+  <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
   </li>
-  <li class="nav-item"> <a class="nav-link" href="personal_projects.html">Personal projects</a> </li>
-  <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
+
+	
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
+	</li>
+	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
 <p>This is the site full of my projects.</p>
 <footer>copyright 2021.</footer>
