--- a/10th grade projects.html
+++ b/10th grade projects.html
@@ -11,16 +11,19 @@
 <h1>MY 10TH GRADE PROJECTS</h1>
 	
 	
-		<ul class="nav nav-tabs">
-  <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-  <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+<ul class="nav nav-tabs">
+  <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
   </li>
-  <li class="nav-item"> <a class="nav-link" href="personal_projects.html">Personal projects</a> </li>
-  <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
+
+	
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
+	</li>
+	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
