added 12th grade projects page

--- a/10th grade projects.html
+++ b/10th grade projects.html
@@ -16,7 +16,7 @@
   <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
-      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
+      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">11th grade projects</a> </div>
   </li>
 
 	
@@ -27,6 +27,7 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
+
 	
 <h2 style="text-align: center;"><p>My Slipknot band members project.</p>
 <iframe src="https://docs.google.com/document/d/1RsWc81NuQa8YANnml41eWMhZdE33OpS6YQ9K_y8glPw/edit?usp=sharing" width="60%" height="700"></iframe></h2>
