--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
-      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
+      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">11th grade projects</a> </div>
   </li>
 
 	
@@ -23,8 +23,10 @@
 	</li>
 	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
-<p>This is the site full of my projects.</p>
-<footer>copyright 2021.</footer>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap-4.4.1.js"></script>
+
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
