--- a/9th grade projects.html
+++ b/9th grade projects.html
@@ -19,8 +19,7 @@
   <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
-
-      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> </div>
+      <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">11th grade projects</a> </div>
   </li>
 
 	
@@ -31,6 +30,7 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
+
 	
 <h2 style="text-align: center;"><p>My project about food during world war one.</p><iframe src="https://docs.google.com/presentation/d/1ePfyBprHkC-Ay0lSlvz1oVZOECh8y0dXiQHKyrQpqmo/edit?usp=sharing" width="60%" height="700"></iframe></h2>
 <br>
