--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -11,7 +11,7 @@
 <h1>MY 12TH GRADE PROJECTS</h1>
 	
 <ul class="nav nav-tabs">
-  <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
   <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
