--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>MY PORTFOLIO</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
-  <li class="nav-item"> <a class="nav-link disabled" href="#">expeditions</a> </li>
+  <li class="nav-item"> <a class="nav-link active" href="#">expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">12th grade projects</a> 
