--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" href="portfolio.css">
 <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>portfolio</title>
 </head>
@@ -12,15 +11,15 @@
 <h1>MY PORTFOLIO</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
-  <li class="nav-item"> <a class="nav-link active" href="#">expeditions</a> </li>
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
+  <li class="nav-item"> <a class="nav-link disable" href="#">expeditions</a> </li>
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">12th grade projects</a> 
     </div>
   </li>
 
 	
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">Personal projects</a>
 	</li>
 	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
