--- a/exp.html
+++ b/exp.html
@@ -9,7 +9,7 @@
 <title>Expeditions</title>
 </head>
 <body>
-<h1>expeditions</h1>
+<h1>Expeditions</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
   <li class="nav-item"> <a class="nav-link active" href="exp.html">Expeditions</a> </li>
