Update 11th grade projects.html

--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -27,7 +27,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
 
-<iframe src="https://docs.google.com/presentation/d/1ZnQ-fYzPk8ET6SltvdtGHzZOGMPfJ1qdpj5N2DfDybU/edit?usp=sharing"></iframe>
+<iframe src="https://docs.google.com/presentation/d/1ZnQ-fYzPk8ET6SltvdtGHzZOGMPfJ1qdpj5N2DfDybU/edit?usp=sharing" width="300" height="400"></iframe>
 <body>
 </body>
 </html>
