--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -26,8 +26,8 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
-
-<iframe src="https://docs.google.com/presentation/d/1ZnQ-fYzPk8ET6SltvdtGHzZOGMPfJ1qdpj5N2DfDybU/edit?usp=sharing" width="500" height="400"></iframe>
+	<h2>Linux project</h2>
+<iframe src="https://docs.google.com/presentation/d/1ZnQ-fYzPk8ET6SltvdtGHzZOGMPfJ1qdpj5N2DfDybU/edit?usp=sharing" width="500" height="300"></iframe>
 <body>
 </body>
 </html>
