--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>portfolio</title>
 </head>
 <body>
-<h1>MY PORTFOLIO</h1>
+<h1>EVAN A'S PORTFOLIO</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
   <li class="nav-item"> <a class="nav-link active" href="exp.html">expeditions</a> </li>
