Update 11th grade projects.html

--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -32,6 +32,11 @@
 	
 	<br>
 	<h3>Video Synth Project</h3>
+	<br>
+	<br>
+	
+	<h4>Mushroom project</h4>
+	<iframe src="https://docs.google.com/presentation/d/1jIEV6pv2mSS1uAOKrWoqhlOm1sGsqCHzXzTvRrCIVPQ/edit#slide=id.p" width="700" height="400"></iframe>
 <body>
 </body>
 </html>
