Update 11th grade projects.html

--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -32,6 +32,7 @@
 	
 	<br>
 	<h3>Video Synth Project</h3>
+	<iframe src="https://drive.google.com/file/d/1VWyczt-aLxswQzuGXTl16inFef9oVGbj/view?usp=sharing" width="900" height="600"></iframe>
 	<br>
 	<br>
 	
