--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="portfolio.css">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="portfolio.css">
 <title>11th grade projects</title>
 </head>
 <h1>MY 11TH GRADE PROJECTS</h1>
@@ -31,7 +31,7 @@
 	<br>
 	
 	<br>
-	<h3>Video Synth Project</h3>
+	<h3 class="bold">Video Synth Project</h3>
 	<iframe src="https://drive.google.com/file/d/1VWyczt-aLxswQzuGXTl16inFef9oVGbj/view?usp=sharing" width="900" height="600"></iframe>
 	<br>
 	<br>
