--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -19,7 +19,8 @@
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">12th grade projects</a> </div>
   </li>
 
-	
+
+
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
 	</li>
 	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
@@ -27,6 +28,9 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
+
+<h1>cryptogrophy project</h1>
+<p>https://github.com/hauntedwaffledogs/enigma-machine</p>
 <body>
 </body>
 </html>
