--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -27,8 +27,10 @@
 </ul>
 
 
-<h2>cryptogrophy project</h2>
+<h2>cryptogrophy project.</h2>
 <p>https://github.com/hauntedwaffledogs/enigma-machine</p>
+
+<h3>Group B Rally racing.</h3>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
