--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -27,7 +27,7 @@
 </ul>
 
 
-<h2>cryptogrophy project.</h2>
+<h2>cryptography project.</h2>
 <p>https://github.com/hauntedwaffledogs/enigma-machine</p>
 
 <h3>Group B Rally racing.</h3>
