made the website look a little nicer

--- a/about_me.html
+++ b/about_me.html
@@ -14,6 +14,7 @@
 	
 <ul class="nav nav-tabs">
   <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link active" href="personal_projects.html">Personal Projects</a> </li>
   <li class="nav-item"> <a class="nav-link disabled" href="exp.html">Expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
@@ -21,9 +22,8 @@
   </li>
 
 	
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
 	</li>
-	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
+	 <li class="nav-item"> <a class="nav-link active" href="about_me.html">About me</a> </li>
 </ul>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
