--- a/exp.html
+++ b/exp.html
@@ -11,7 +11,8 @@
 <body>
 <h1>Expeditions</h1>
 <ul class="nav nav-tabs">
-  <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="personal_projects.html">Personal Projects</a> </li>
   <li class="nav-item"> <a class="nav-link active" href="exp.html">Expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
@@ -20,7 +21,6 @@
   </li>
 
 	
-  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Personal projects</a>
 	</li>
 	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
