--- a/11th grade projects.html
+++ b/11th grade projects.html
@@ -26,18 +26,23 @@
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
-	<h2>Linux project</h2>
+	<h2 style="text-align: center;">Linux project
+		<br>
 <iframe src="https://docs.google.com/presentation/d/1ZnQ-fYzPk8ET6SltvdtGHzZOGMPfJ1qdpj5N2DfDybU/edit?usp=sharing" width="900" height="600"></iframe>
+</h2>
 	<br>
 	
 	<br>
-	<h3 class="bold">Video Synth Project</h3>
+	<h3 style="text-align: center;" class="bold">Video Synth Project
 	<iframe src="https://drive.google.com/file/d/1VWyczt-aLxswQzuGXTl16inFef9oVGbj/view?usp=sharing" width="900" height="600"></iframe>
+	</h3>
 	<br>
 	<br>
 	
-	<h4>Mushroom project</h4>
+	<h4 style="text-align: center;">Mushroom project
+		<br>
 	<iframe src="https://docs.google.com/presentation/d/1jIEV6pv2mSS1uAOKrWoqhlOm1sGsqCHzXzTvRrCIVPQ/edit#slide=id.p" width="900" height="600"></iframe>
+	</h4>
 <body>
 </body>
 </html>
