--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -27,15 +27,20 @@
 </ul>
 
 
-<h2>cryptography project.</h2>
+<h2 style="text-align: center;">cryptography project.
 <p>https://github.com/hauntedwaffledogs/enigma-machine</p>
+</h2>
+<br>
+<br>
+<br>
+<h3 style="text-align: center;">Group B Rally racing.
 
-<h3>Group B Rally racing.</h3>
+
+</h3>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
-
 
 <body>
 </body>
