--- a/9th grade projects.html
+++ b/9th grade projects.html
@@ -42,8 +42,8 @@
 <h4 style="text-align: center;"><p>My project about mixing animals togeter.</p><iframe src="https://docs.google.com/presentation/d/1VDM0v_UusqRxJWoZ9k3XQ00bIN5nycpvUgameVY0bmg/edit?usp=sharing" width="60%" height="700"></iframe></h4>
 	
 <h5 style="text-align: center;"><p>My project about civilizations.</p></h5>
-<img src="/20200205_141925.jpg" width="1088" height="503" alt=""/>
-<img src="/20200205_141932.jpg" width="1088" height="503" alt=""/>
+<img style="text-align: center;" src="/20200205_141925.jpg" width="1088" height="503" alt=""/>
+<img style="text-align: center;" src="/20200205_141932.jpg" width="1088" height="503" alt=""/>
 <nav aria-label="breadcrumb">
    <ol class="breadcrumb">
 </ol>
