--- a/about_me.html
+++ b/about_me.html
@@ -13,9 +13,9 @@
 <h1 class="col-xl-12">ABOUT ME</h1>
 	
 <ul class="nav nav-tabs">
-  <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
-  <li class="nav-item"> <a class="nav-link active" href="personal_projects.html">Personal Projects</a> </li>
-  <li class="nav-item"> <a class="nav-link disabled" href="exp.html">Expeditions</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="personal_projects.html">Personal Projects</a> </li>
+  <li class="nav-item"> <a class="nav-link" href="exp.html">Expeditions</a> </li>
   <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">School projects</a>
     <div class="dropdown-menu"> <a class="dropdown-item" href="9th grade projects.html">9th grade projects</a> <a class="dropdown-item" href="10th grade projects.html">10th grade projects</a>
       <a class="dropdown-item" href="11th grade projects.html">11th grade projects</a> <a class="dropdown-item" href="12th grade projects.html">12th grade projects</a> </div>
@@ -31,6 +31,6 @@
 
 <p>place_holder</p>
 	
-	<footer>copyright 2021</footer>
+
 </body>
 </html>
