--- a/about_me.html
+++ b/about_me.html
@@ -29,7 +29,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
 
-<p>place_holder</p>
+<img src="c12daffa996683fe1080c809aca58e23.png" alt="MemeImage">
 	
 
 </body>
