--- a/12th grade projects.html
+++ b/12th grade projects.html
@@ -27,17 +27,27 @@
 </ul>
 
 
-<h2 style="text-align: center;">cryptography project.
-<p>https://github.com/hauntedwaffledogs/enigma-machine</p>
+<h2 style="text-align: center;">cryptography project:
+  <br>
+<a href="url">https://github.com/hauntedwaffledogs/enigma-machine</a>
 </h2>
 <br>
 <br>
 <br>
-<h3 style="text-align: center;">Group B Rally racing.
-
-
+<h3 style="text-align: center;">Group B Rally racing:
+  <br>
+<a href="url">https://drive.google.com/file/d/1M8UJgTtZZnPuF3MD4Zs0ZRtM7pwq3FRq/view?usp=share_link</a>
 </h3>
-
+<br>
+<br>
+<br>
+<h4 style="text-align: center;">Colombian Exchange:
+<br>
+<a href="url">https://storymaps.arcgis.com/stories/2f0b13605bbb478ba7a4d5e6325e7708</a>
+</h4>
+<h5 style="text-align: center;"> American Revolution
+<p>Nothing here yet</p>
+</h5>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
