--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+  9th grade projects: 4
+  10th grade projects: 3
+  11th grade projects: 3
+  12th grade projects: 3.5
+-->
+
 <!doctype html>
 <html>
 <head>
