--- a/9th grade projects.html
+++ b/9th grade projects.html
@@ -12,7 +12,7 @@
 
 <body>
 	
-<h1>MY 9TH GRADE PROJECTS</h1>
+<h1 class="glitch" data-text="MY 9TH GRADE PROJECTS">MY 9TH GRADE PROJECTS</h1>
 	
 	
 <ul class="nav nav-tabs">
