--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	</li>
 	 <li class="nav-item"> <a class="nav-link" href="about_me.html">About me</a> </li>
 </ul>
+
+<h2>This site is currently under a redesign.</h2>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
