--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <h2>Nissan</h2>
 
 <div id="container">
-  <div class="model active">Model 1</div>
-  <div class="model">Model 2</div>
-  <div class="model">Model 3</div>
+  <div class="model active">sentra</div>
+  <div class="model">Altima</div>
+  <div class="model">maxima</div>
   <!-- Add more models as needed -->
 </div>
 
